--- a/project7.html
+++ b/project7.html
@@ -4,12 +4,12 @@
 <head>
   <title>CSS Classes and IDs</title>
   
-  <link rel="stylesheet" href="project7style.css" type="text/css">
+  <link rel="stylesheet" type="text/css" href="project7style.css">
 </head>
 
 <body>
 
-<h1>Hello World</h1>
+<h1> id= "main-headline" class="emphasis">Hello World</h1>
 <hr>
 <h2>A Place I Would Like to Visit</h2>
 	<p>I would like to go to New York to be able to see all the tall buildings. The following 
@@ -20,8 +20,8 @@
    
    
 <h2>A person I admire <br /> (past or present)</h2>
-  <p>A person I admire would be an author named J.R.R. Tolkien because I like the way he 
-  writes about his characters. He writes about the characters in a different way.
+  <p class="person-description">A person I admire would be an author named J.R.R. Tolkien because I like the way he 
+  writes about his characters. <span class="important-point">He writes about the characters in a different way.</span>
   The following link shows more information about Tolkien and
   his other books.</p><a href="https://en.wikipedia.org/wiki/J._R._R._Tolkien" target="_blank">More About Tolkien</a>
    <br />
@@ -34,7 +34,7 @@
   <li>Strawberries</li>
   <li>Kiwifruits</li>
   <li>Grapes</li>
-  <li>Mangoes</li>
+  <li class="top-favorite" class= "emphasis">Mangoes</li>
 </ul>
 
 <h2>Favorite Presidents</h2>
