--- a/project7.html
+++ b/project7.html
@@ -9,10 +9,10 @@
 
 <body>
 
-<h1> id= "main-headline" class="emphasis">Hello World</h1>
-<hr>
+<h1 id= "main-headline" class="emphasis">Hello World</h1>
+<hr width= "80%">
 <h2>A Place I Would Like to Visit</h2>
-	<p>I would like to go to New York to be able to see all the tall buildings. The following 
+	<p class= "place-description">I would like to go to New York to be able to see all the tall buildings. The following 
 	link shows all the other great things about New York.</p>
 	<a href="https://en.wikipedia.org/wiki/New_York" target="_blank">More About New York</a>
    <br />
@@ -34,7 +34,7 @@
   <li>Strawberries</li>
   <li>Kiwifruits</li>
   <li>Grapes</li>
-  <li class="top-favorite" class= "emphasis">Mangoes</li>
+  <li class="top-favorite emphasis">Mangoes</li>
 </ul>
 
 <h2>Favorite Presidents</h2>
