--- a/project7.html
+++ b/project7.html
@@ -34,7 +34,7 @@
   <li>Strawberries</li>
   <li>Kiwifruits</li>
   <li>Grapes</li>
-  <li class="emphasis top-favorite" >Mangoes</li>
+  <li class="top-favorite" class="emphasis" >Mangoes</li>
 </ul>
 
 <h2>Favorite Presidents</h2>
