--- a/project7.html
+++ b/project7.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<h1 id= "main-headline" class="emphasis">Hello World</h1>
+<h1 class="emphasis" id= "main-headline">Hello World</h1>
 <hr>
 <h2>A Place I Would Like to Visit</h2>
 	<p class= "place-description">I would like to go to New York to be able to see all the tall buildings. The following 
@@ -34,7 +34,7 @@
   <li>Strawberries</li>
   <li>Kiwifruits</li>
   <li>Grapes</li>
-  <li class="top-favorite" class="emphasis" >Mangoes</li>
+  <li class="top-favorite emphasis" >Mangoes</li>
 </ul>
 
 <h2>Favorite Presidents</h2>
@@ -49,5 +49,5 @@
 
 <!-- This is a page that talks about the interests of a person. -->
 <!-- In this page itcontains facts about another person. -->
-
+</body>
 </html>
