--- a/project7.html
+++ b/project7.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<h1 class="emphasis" id= "main-headline">Hello World</h1>
+<h1 class="emphasis" id="main-headline">Hello World!</h1>
 <hr>
 <h2>A Place I Would Like to Visit</h2>
 	<p class= "place-description">I would like to go to New York to be able to see all the tall buildings. The following 
@@ -34,7 +34,7 @@
   <li>Strawberries</li>
   <li>Kiwifruits</li>
   <li>Grapes</li>
-  <li class="emphasis top-favorite" >Mangoes</li>
+  <li style="font-weight:bold; color: red; font-style: italic >Mangoes</li>
 </ul>
 
 <h2>Favorite Presidents</h2>
