--- a/project7.html
+++ b/project7.html
@@ -34,7 +34,7 @@
   <li>Strawberries</li>
   <li>Kiwifruits</li>
   <li>Grapes</li>
-  <li style="font-weight:bold; color: red; font-style: italic">Mangoes</li>
+  <li style="font-weight:bold;" "color: red;" "font-style: italic">Mangoes</li>
 </ul>
 
 <h2>Favorite Presidents</h2>
