--- a/project7.html
+++ b/project7.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<h1 id="main-headline" style=font-style:italic; style=text-align:center; style=color:blue;>Hello World!</h1>
+<h1 id="main-headline" style=font-style:italic; text-align:center; color:blue;>Hello World!</h1>
 <hr>
 <h2>A Place I Would Like to Visit</h2>
 	<p class= "place-description">I would like to go to New York to be able to see all the tall buildings. The following 
