--- a/project7.html
+++ b/project7.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<h1 id="main-headline" style=font-style:italic;>Hello World!</h1>
+<h1 style=font-style:italic; color:blue; text-align:center>Hello World!</h1>
 <hr>
 <h2>A Place I Would Like to Visit</h2>
 	<p class= "place-description">I would like to go to New York to be able to see all the tall buildings. The following 
